--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -5,7 +5,8 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:b="http://bootsfaces.net/ui">
 
 <ui:composition template="modelo.xhtml">
 
@@ -19,6 +20,7 @@
 			<p:commandLink action="#{filmeMB.acaoListar}"
 				value="#{msgs.tituloFilmes}"></p:commandLink>
 		</p:panelGrid>
+		
 
 	</ui:define>
 </ui:composition>
