--- a/WebContent/modelo.xhtml
+++ b/WebContent/modelo.xhtml
@@ -5,6 +5,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:b="http://bootsfaces.net/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 	<title><ui:insert name="titulo">Título</ui:insert></title>
@@ -12,7 +13,7 @@
 </h:head>
 <h:body>
 
-<p:panel style="width: 980px; text-align: center;">
+<p:panel style="text-align: center;">
 	<h:form id="form" prependId="false">
 
 <div id="imagem" align="center">
