--- a/WebContent/filmeEditar.xhtml
+++ b/WebContent/filmeEditar.xhtml
@@ -5,11 +5,12 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:b="http://bootsfaces.net/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <ui:composition template="modelo.xhtml">
 
-	<ui:define name="titulo">#{msgs.tituloEditarProd}</ui:define>
+	<ui:define name="titulo">#{msgs.tituloEditarFil}</ui:define>
 
 	<ui:define name="conteudo">
 		<p:panelGrid columns="2">
@@ -56,11 +57,13 @@
 			<p:outputLabel for="qntfilme" value="#{msgs.campoqntFilme}:" />
 			<p:inputText id="qntfilme" value="#{filmeMB.filme.qntfilme}"
 				required="true">
+				<f:validateLongRange minimum="0" />
 			</p:inputText>
 			
 			<p:outputLabel for="valorfilme" value="#{msgs.campovalorFilme}:" />
 			<p:inputText id="valorfilme" value="#{filmeMB.filme.valorfilme}"
 				required="true">
+				<f:validateDoubleRange minimum="0.00" />
 				<f:convertNumber pattern="###,###,##0.00" />
 			</p:inputText>
 
